header align fix

--- a/src/styles/1header.scss
+++ b/src/styles/1header.scss
@@ -42,6 +42,7 @@ header {
   .socialLinks {
     display: flex;
     gap: 0.05rem;
+    margin-left: 0.85rem;
 
     @media (max-width: 768px) {
       display: none;
